[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "dnspython==2.7.0",
    "email-validator==2.2.0",
    "expression==5.6.0",
    "fastapi==0.115.8",
    "fastapi-cli==0.0.7",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "idna==3.10",
    "jinja2==3.1.5",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pygments==2.19.1",
    "pyobjc==11.0",
    "pyobjc-core==11.0",
    "pyobjc-framework-accessibility==11.0",
    "pyobjc-framework-accounts==11.0",
    "pyobjc-framework-addressbook==11.0",
    "pyobjc-framework-adservices==11.0",
    "pyobjc-framework-adsupport==11.0",
    "pyobjc-framework-applescriptkit==11.0",
    "pyobjc-framework-applescriptobjc==11.0",
    "pyobjc-framework-applicationservices==11.0",
    "pyobjc-framework-apptrackingtransparency==11.0",
    "pyobjc-framework-audiovideobridging==11.0",
    "pyobjc-framework-authenticationservices==11.0",
    "pyobjc-framework-automaticassessmentconfiguration==11.0",
    "pyobjc-framework-automator==11.0",
    "pyobjc-framework-avfoundation==11.0",
    "pyobjc-framework-avkit==11.0",
    "pyobjc-framework-avrouting==11.0",
    "pyobjc-framework-backgroundassets==11.0",
    "pyobjc-framework-businesschat==11.0",
    "pyobjc-framework-calendarstore==11.0",
    "pyobjc-framework-callkit==11.0",
    "pyobjc-framework-carbon==11.0",
    "pyobjc-framework-cfnetwork==11.0",
    "pyobjc-framework-cinematic==11.0",
    "pyobjc-framework-classkit==11.0",
    "pyobjc-framework-cloudkit==11.0",
    "pyobjc-framework-cocoa==11.0",
    "pyobjc-framework-collaboration==11.0",
    "pyobjc-framework-colorsync==11.0",
    "pyobjc-framework-contacts==11.0",
    "pyobjc-framework-contactsui==11.0",
    "pyobjc-framework-coreaudio==11.0",
    "pyobjc-framework-coreaudiokit==11.0",
    "pyobjc-framework-corebluetooth==11.0",
    "pyobjc-framework-coredata==11.0",
    "pyobjc-framework-corehaptics==11.0",
    "pyobjc-framework-corelocation==11.0",
    "pyobjc-framework-coremedia==11.0",
    "pyobjc-framework-coremediaio==11.0",
    "pyobjc-framework-coremidi==11.0",
    "pyobjc-framework-coreml==11.0",
    "pyobjc-framework-coremotion==11.0",
    "pyobjc-framework-coreservices==11.0",
    "pyobjc-framework-corespotlight==11.0",
    "pyobjc-framework-coretext==11.0",
    "pyobjc-framework-corewlan==11.0",
    "pyobjc-framework-cryptotokenkit==11.0",
    "pyobjc-framework-datadetection==11.0",
    "pyobjc-framework-devicecheck==11.0",
    "pyobjc-framework-dictionaryservices==11.0",
    "pyobjc-framework-discrecording==11.0",
    "pyobjc-framework-discrecordingui==11.0",
    "pyobjc-framework-diskarbitration==11.0",
    "pyobjc-framework-dvdplayback==11.0",
    "pyobjc-framework-eventkit==11.0",
    "pyobjc-framework-exceptionhandling==11.0",
    "pyobjc-framework-executionpolicy==11.0",
    "pyobjc-framework-extensionkit==11.0",
    "pyobjc-framework-externalaccessory==11.0",
    "pyobjc-framework-fileprovider==11.0",
    "pyobjc-framework-fileproviderui==11.0",
    "pyobjc-framework-findersync==11.0",
    "pyobjc-framework-fsevents==11.0",
    "pyobjc-framework-gamecenter==11.0",
    "pyobjc-framework-gamecontroller==11.0",
    "pyobjc-framework-gamekit==11.0",
    "pyobjc-framework-gameplaykit==11.0",
    "pyobjc-framework-healthkit==11.0",
    "pyobjc-framework-imagecapturecore==11.0",
    "pyobjc-framework-inputmethodkit==11.0",
    "pyobjc-framework-installerplugins==11.0",
    "pyobjc-framework-instantmessage==11.0",
    "pyobjc-framework-intents==11.0",
    "pyobjc-framework-intentsui==11.0",
    "pyobjc-framework-iobluetooth==11.0",
    "pyobjc-framework-iobluetoothui==11.0",
    "pyobjc-framework-iosurface==11.0",
    "pyobjc-framework-ituneslibrary==11.0",
    "pyobjc-framework-kernelmanagement==11.0",
    "pyobjc-framework-latentsemanticmapping==11.0",
    "pyobjc-framework-launchservices==11.0",
    "pyobjc-framework-libdispatch==11.0",
    "pyobjc-framework-libxpc==11.0",
    "pyobjc-framework-linkpresentation==11.0",
    "pyobjc-framework-localauthentication==11.0",
    "pyobjc-framework-localauthenticationembeddedui==11.0",
    "pyobjc-framework-mailkit==11.0",
    "pyobjc-framework-mapkit==11.0",
    "pyobjc-framework-mediaaccessibility==11.0",
    "pyobjc-framework-medialibrary==11.0",
    "pyobjc-framework-mediaplayer==11.0",
    "pyobjc-framework-mediatoolbox==11.0",
    "pyobjc-framework-metal==11.0",
    "pyobjc-framework-metalfx==11.0",
    "pyobjc-framework-metalkit==11.0",
    "pyobjc-framework-metalperformanceshaders==11.0",
    "pyobjc-framework-metalperformanceshadersgraph==11.0",
    "pyobjc-framework-metrickit==11.0",
    "pyobjc-framework-mlcompute==11.0",
    "pyobjc-framework-modelio==11.0",
    "pyobjc-framework-multipeerconnectivity==11.0",
    "pyobjc-framework-naturallanguage==11.0",
    "pyobjc-framework-netfs==11.0",
    "pyobjc-framework-network==11.0",
    "pyobjc-framework-networkextension==11.0",
    "pyobjc-framework-notificationcenter==11.0",
    "pyobjc-framework-opendirectory==11.0",
    "pyobjc-framework-osakit==11.0",
    "pyobjc-framework-oslog==11.0",
    "pyobjc-framework-passkit==11.0",
    "pyobjc-framework-pencilkit==11.0",
    "pyobjc-framework-phase==11.0",
    "pyobjc-framework-photos==11.0",
    "pyobjc-framework-photosui==11.0",
    "pyobjc-framework-preferencepanes==11.0",
    "pyobjc-framework-pushkit==11.0",
    "pyobjc-framework-quartz==11.0",
    "pyobjc-framework-quicklookthumbnailing==11.0",
    "pyobjc-framework-replaykit==11.0",
    "pyobjc-framework-safariservices==11.0",
    "pyobjc-framework-safetykit==11.0",
    "pyobjc-framework-scenekit==11.0",
    "pyobjc-framework-screencapturekit==11.0",
    "pyobjc-framework-screensaver==11.0",
    "pyobjc-framework-screentime==11.0",
    "pyobjc-framework-scriptingbridge==11.0",
    "pyobjc-framework-searchkit==11.0",
    "pyobjc-framework-security==11.0",
    "pyobjc-framework-securityfoundation==11.0",
    "pyobjc-framework-securityinterface==11.0",
    "pyobjc-framework-sensitivecontentanalysis==11.0",
    "pyobjc-framework-servicemanagement==11.0",
    "pyobjc-framework-sharedwithyou==11.0",
    "pyobjc-framework-sharedwithyoucore==11.0",
    "pyobjc-framework-shazamkit==11.0",
    "pyobjc-framework-social==11.0",
    "pyobjc-framework-soundanalysis==11.0",
    "pyobjc-framework-speech==11.0",
    "pyobjc-framework-spritekit==11.0",
    "pyobjc-framework-storekit==11.0",
    "pyobjc-framework-symbols==11.0",
    "pyobjc-framework-syncservices==11.0",
    "pyobjc-framework-systemconfiguration==11.0",
    "pyobjc-framework-systemextensions==11.0",
    "pyobjc-framework-threadnetwork==11.0",
    "pyobjc-framework-uniformtypeidentifiers==11.0",
    "pyobjc-framework-usernotifications==11.0",
    "pyobjc-framework-usernotificationsui==11.0",
    "pyobjc-framework-videosubscriberaccount==11.0",
    "pyobjc-framework-videotoolbox==11.0",
    "pyobjc-framework-virtualization==11.0",
    "pyobjc-framework-vision==11.0",
    "pyobjc-framework-webkit==11.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "pyttsx3==2.98",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "rich==13.9.4",
    "rich-toolkit==0.13.2",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "starlette==0.45.3",
    "typer==0.15.1",
    "typing-extensions==4.12.2",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
    "uvloop==0.21.0",
    "watchfiles==1.0.4",
    "websockets==15.0",
]
